data/Java/19-access-non-static-method/5/[M]Error.txt
https://stackoverflow.com/questions/45270519/non-static-method-cannot-be-referenced-from-a-static-context-cant-call-the-met
FizzBuzz.java:6: error: non-static method fizzBuzz(int) cannot be referenced from a static context
        System.out.println(fizzBuzz(15));
                           ^